--- a/api/view/comunidade.ejs
+++ b/api/view/comunidade.ejs
@@ -24,7 +24,19 @@
                 + Nova Comunidade
             </button>
         </aside>
-teste teste teste
+
+         <main>
+
+            <div class="barraPesquisa">
+                <span class="search-icon"><img src="../imagens/procurar.png" alt=""></span>
+                <input type="text" id="campoPesquisa" placeholder="Busque palavra-chave/ comunidade/ etc" />
+                <button onclick="pesquisarPosts()">Buscar</button>
+            </div>
+
+        </main>
+                        
+        
+        Aqui é comunidade
     </body>
 
     </html>
