--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -1024,6 +1024,14 @@ footer {
   position: relative;
 }
 
+.redirecionarPost{
+    text-decoration: none;
+  color: inherit;
+  background: none;
+  border: none;
+  outline: none;
+}
+
 .barraPesquisa {
   display: flex;
   align-items: center;
@@ -1203,4 +1211,124 @@ footer {
 
 .btn-criar-comunidade:hover {
   background-color: #F2D1EF;
+}
+
+
+
+/* posts do forum */
+
+.conteudoPrincipal {
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.postCompleto {
+    display: flex;
+    gap: 30px;
+}
+
+.conteudoPost {
+    background-color: #d5d9f0;
+    padding: 20px;
+    border-radius: 10px;
+    flex: 3;
+}
+
+.infoForum {
+   width: 220px;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  background-color: #fef0f8;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.acoesPost button {
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.comentarioBox {
+    width: 100%;
+    max-width: 700px;
+    margin-top: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+}
+
+.comentarioInputArea {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.comentarioInputArea textarea {
+    width: 100%;
+    resize: none;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    min-height: 60px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #f5f5f5;
+}
+
+.comentarioAcoesEsquerda {
+    display: flex;
+    gap: 10px;
+    margin-left: 5px;
+    color: #555;
+}
+
+.comentarioAcoesDireita {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+.cancelarBtn, .comentarBtn {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 999px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.cancelarBtn {
+    background-color: #f0f0f0;
+    color: #333;
+}
+
+.comentarBtn {
+    background-color: #007bff;
+    color: white;
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    background-color: #ccc;
+    border-radius: 50%;
+}
+.tituloPost {
+    font-size: 1.8em;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #333;
+}
+.avatar.pequeno {
+    width: 30px;
+    height: 30px;
 }
