--- a/api/view/Forum.ejs
+++ b/api/view/Forum.ejs
@@ -8,8 +8,9 @@
                 <% if (comunidades && comunidades.length> 0) { %>
                     <% comunidades.forEach(com=> { %>
                         <li>
-                            <a href="/comunidade/<%= com.ID_COMUNIDADE_T14 %>">
-                                <%= com.NOME_COMUNIDADE_T14 %>
+                            
+                            <a class="nomeComunidade" href="/comunidade/<%= com.ID_COMUNIDADE_T14 %>">
+                                <div class="avatar_comunidade"></div><%= com.NOME_COMUNIDADE_T14 %>
                             </a>
                             <small>(<%= com.total_membros || 0 %> membros)</small>
                         </li>
@@ -149,7 +150,7 @@
 
                                     <div class="comentarios">
                                         <button class="btn-comentarios" onclick="verComentarios(<%= post.id %>)">
-                                            <img src="/imagens/comente.png" alt=""> Comentários
+                                            <img src="/imagens/comente.png" alt=""> 
                                         </button>
                                     </div>
                                 </div>
