--- a/api/view/post.ejs
+++ b/api/view/post.ejs
@@ -10,7 +10,8 @@
                     <% comunidades.forEach(com=> { %>
                         <li>
                             <a class="nomeComunidade" href="/comunidade/<%= com.ID_COMUNIDADE_T14 %>">
-                                <div class="avatar_comunidade"></div><%= com.NOME_COMUNIDADE_T14 %>
+                                <div class="avatar_comunidade"></div>
+                                <%= com.NOME_COMUNIDADE_T14 %>
                             </a>
                             <small>(<%= com.total_membros || 0 %> membros)</small>
                         </li>
@@ -20,7 +21,6 @@
                                 <% } %>
             </ul>
 
-            <!-- Botão para criar nova comunidade -->
             <button class="btn-criar-comunidade" onclick="mostrarFormularioComunidade()">
                 + Nova Comunidade
             </button>
@@ -28,80 +28,157 @@
 
         <!-- Conteúdo principal -->
         <main class="conteudoPrincipal">
-
             <div class="barraPesquisa">
                 <span class="search-icon"><img src="/imagens/procurar.png" alt="Buscar"></span>
                 <input type="text" id="campoPesquisa" placeholder="Busque palavra-chave/ fórum/ etc" />
                 <button>Buscar</button>
             </div>
 
-            <h2 class="tituloPost">Título do Post</h2>
-            <!-- Post completo -->
-            <div class="postCompleto">
-
-
-                <div class="conteudoPost">
-                    <p>
-                        conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo
-                        conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo
-                        conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo conteúdo
-                    </p>
-                </div>
-            </div>
-            <div class="acoesPost">
-                <button><img class="avaliarBtn" src="/imagens/gostar.png" alt=""></button>
-                <button><img class="avaliarBtn" src="/imagens/nao-gosto.png" alt=""></button>
-            </div>
-
-
-            <div class="comentarioBox">
-                <div class="comentarioInputArea">
-                    <textarea placeholder="Escreva um comentário..."></textarea>
-                    <div class="comentarioAcoesEsquerda">
-                        <button><i class="fas fa-image"></i></button>
-                        <button><i class="fas fa-file"></i></button>
-                        <button><i class="fas fa-font"></i></button>
-                    </div>
-                    <div class="comentarioAcoesDireita">
-                        <button class="cancelarBtn">Cancel</button>
-                        <button class="comentarBtn">Comment</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Comentários -->
-            <div class="secaoComentarios">
-                <div class="comentario">
-                    <div class="avatar pequeno"></div>
-                    <div>
-                        <strong>nome do usuário</strong>
-                        <p>
-                            conteúdo do comentário conteúdo do comentário conteúdo do comentário conteúdo do comentário
-                            conteúdo do comentário conteúdo do comentário conteúdo do comentário
-                        </p>
-                    </div>
+            <% if (error) { %>
+                <div class="error-message">
+                    <h2>
+                        <%= error %>
+                    </h2>
+                    <a href="/Forum">Voltar ao fórum</a>
                 </div>
 
 
-                <div class="comentario">
-                    <div class="avatar pequeno"></div>
-                    <div>
-                        <strong>outro usuário</strong>
-                        <p>
-                            outro comentário outro comentário outro comentário outro comentário
-                            outro comentário outro comentário
-                        </p>
+                <% } else if (post) { %>
+                    <h2 class="tituloPost">
+                        <%= post.titulo %>
+                    </h2>
+
+
+                    <div class="forum-info">
+                        <div class="avatar"
+                            style="background-image: url('<%= post.autor_foto ? `${post.autor_foto}?v=${Date.now()}` : '/img/default.png' %>');"
+                            data-user-id="<%= post.autor_id %>">
+                        </div>
+
+
+                        <span>
+                            <% if (post.forum) { %>
+                                <%= post.forum %>
+                                    <% } else { %>
+                                        Geral
+                                        <% } %>
+                        </span>
+                        <span class="autor">• por <%= post.autor %></span>
+                        <span class="data">• <%= new Date(post.data).toLocaleDateString('pt-BR') %></span>
                     </div>
-                </div>
-            </div>
+
+                    <div class="postCompleto">
+
+                        <div class="conteudoPost">
+                            <%- post.conteudo %>
+
+                                <% if (post.arquivo) { %>
+                                    <div class="arquivo-post">
+                                        <a href="<%= post.arquivo %>" target="_blank">
+                                            📎 Ver anexo
+                                        </a>
+                                    </div>
+                                    <% } %>
+                        </div>
+                    </div>
+
+                    <div class="acoesPost">
+
+                        <button class="btn-avaliacao-positivo">
+                            <img class="avaliarBtn" src="/imagens/gostar.png" alt="">
+                            <span id="likes">
+                                <%= post.likes || 0 %>
+                            </span>
+                        </button>
+
+
+                        <button class="btn-avaliacao-negativo">
+                            <img class="avaliarBtn" src="/imagens/nao-gosto.png" alt="">
+                            <span id="dislikes">
+                                <%= post.dislikes || 0 %>
+                            </span>
+                        </button>
+
+                    </div>
+
+                    <!-- Comentários -->
+                    <div class="secaoComentarios">
+
+                        <div class="comentarioBox" onclick="expandirComentario()">
+                            <div class="comentarioInputArea">
+                                <textarea placeholder="Add a comment..." onfocus="expandirComentario()"
+                                    onblur="verificarFechamento(this)">
+                                </textarea>
+                            </div>
+                            <div class="comentarioExtras">
+                                <button>🖼️</button>
+                                <button>GIF</button>
+                                <button>Aa</button>
+                            </div>
+                            <div class="comentarioAcoesDireita">
+                                <button class="cancelarBtn" onclick="cancelarComentario()">Cancel</button>
+                                <button class="comentarBtn">Comment</button>
+                            </div>
+                        </div>
+                    </div>
+                    <% } else { %>
+                        <div class="error-message">
+                            <h2>Post não disponível</h2>
+                            <a href="/Forum">Voltar ao fórum</a>
+                        </div>
+                        <% } %>
         </main>
+
         <aside class="infoForum">
-            <h4>Nome do fórum</h4>
-            <p>Descrição do fórum</p>
-            <hr />
-            <div class="autorPost">
-                <div class="avatar"></div>
-                <span>Nome do usuário</span>
-            </div>
+            <% if (post) { %>
+                <h4>
+                    <% if (post.forum) { %>
+                        c/<%= post.forum %>
+                            <% } else { %>
+                                Geral
+                                <% } %>
+                </h4>
+                <% if (post.comunidade_descricao) { %>
+                    <p>
+                        <%= post.comunidade_descricao %>
+                    </p>
+                    <% } %>
+                        <hr />
+                        <div class="autorPost">
+                            <div class="avatar"
+                                style="background-image: url('<%= post.autor_foto ? `${post.autor_foto}?v=${Date.now()}` : '/img/default.png' %>');">
+                            </div>
+                            <span>
+                                <%= post.autor %>
+                            </span>
+                        </div>
+                        <% } else { %>
+                            <h4>Informações não disponíveis</h4>
+                            <p>Este post não existe ou foi removido</p>
+                            <% } %>
         </aside>
+
+        <script>
+            function expandirComentario() {
+                const box = document.querySelector('.comentarioBox');
+                box.classList.add('ativo');
+            }
+
+            function cancelarComentario() {
+                const box = document.querySelector('.comentarioBox');
+                const textarea = box.querySelector('textarea');
+                textarea.value = "";
+                box.classList.remove('ativo');
+            }
+
+            function verificarFechamento(textarea) {
+                // se o conteúdo estiver vazio após desfocar, esconde tudo
+                setTimeout(() => {
+                    if (textarea.value.trim() === "") {
+                        cancelarComentario();
+                    }
+                }, 100);
+            }
+
+        </script>
     </div>
