--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -823,7 +823,7 @@ form {
   max-width: 300px;
   margin-right: 50px;
   margin-bottom: 10%;
-  z-index: auto;
+  z-index: -10;
 }
 
 
@@ -1457,7 +1457,7 @@ footer {
     padding: 2rem;
     background: #e7e7f0;
     font-family: 'Inter', sans-serif;
-    max-width: 100%; 
+    
 }
 
 .banner-comunidade {
@@ -1468,7 +1468,7 @@ footer {
     text-align: center;
     color: #888;
     margin-bottom: 1rem;
-    width: 100%;
+    width: 90%;
    
 }
 
@@ -1484,15 +1484,20 @@ footer {
 }
 
 .cabecalho-comunidade {
+  position: relative;
     display: flex;
-    align-items: center;
+    align-items: center; 
+    left: 2rem;
     gap: 1rem;
     margin-bottom: 2rem;
+    z-index: auto;
 }
 
 .nome-comunidade {
+  position: relative;
     font-size: 1.5rem;
     font-weight: bold;
+    
 }
 
 .info-usuario {
